spacing issues resolved

--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,12 +1,12 @@
 
-
-
 .trees {
     vertical-align: middle;
 }
 
 
-
+.nav-container{
+    padding-top: 50px;
+}
 
 
 
